# skypy

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  Makefile  MoveEditor.spec  README.md  ZA-Trainer-Editor.spec  app.py  changelog.md  contributing.md  info.toml  justfile  main.py  pyproject.toml  pytest.ini
.github/actions/setup/: action.yaml
.github/workflows/: deploy.yml  release.yml  test-deploy-macos.yml  test-deploy-windows.yml  test-deploy.yml  test-release.yml  test.yml
assets/za/: Convert To Bin fbs.bat  Convert To Bin.bat  Convert To Json fbs.bat  How to use.txt  data.trpfd.json  data.trpfd_complete.json  game_data_schema.fbs
assets/za-rando/: Convert To Json.bat  Randomize.py  flatcconvertor.py
assets/za-rando/Input/: encount_data_array.bfbs  encount_data_array.json  trdata_array.json
assets/za-rando/Output/: .txt  encount_data_array.json  trdata_array.json
assets/za/English/: ZukanA.txt  ZukanB.txt  abilities.txt  items.txt  personal.txt  species.txt  tm.txt
assets/za/Input/: pokemon_data_array.bfbs  pokemon_data_array.json  trdata_array.bfbs
assets/za/Output/: pokemon_data_array.json  starter_randomizer_log.txt  trdata_array.json
assets/za/Raw/: battle_player_damage.json  battle_setting.json  item_data.json  item_data.txt  personal_array.txt  personal_waza_param_array.json  personal_waza_param_array.x.txt  tokusei_array.json  tokusei_array.txt  waza_array.json  waza_param_array.json  waza_param_array.x.txt
docs/: personal.xlsx  waza.xlsx
info/: waza.md
notebooks/: personal-demo.ipynb  waza-demo.ipynb  write.ipynb  za-mod.ipynb  za.ipynb
output/: trdata_array.json  trdata_array_compass.json  waza_array.json
scripts/: analyze_binary.py  complete_deserializer.py  flatbuffer_deserializer.py  mappings.py  pre-commits.py  universal_deserializer.py
src/skypy/: __init__.py  __main__.py  mappers.py  types.py
src/skypy/_settings/: core.py
src/skypy/app/: __init__.py  core.py  mon.py  utils.py  waza.py
src/skypy/assets/json/: trdata_array_compass.json
src/skypy/assets/za/: MovePerPokemon.txt  dex.txt  foreign.txt  moves.txt  trdata_array.json
src/skypy/assets/za/mappings/: ballId.json  devId.json  item.json  rank.json  rareType.json  seikaku.json  (+3 more)
src/skypy/const/: __init__.py  abilities.py  devid.py  itemid.py  loc.py  pkmn.py  schema.py  trdevid.py  types.py  waza.py  za.py
src/skypy/fav/: main.py  mons.py  trainer.py  waza.py
src/skypy/fav/personal/: __init__.py  alola.py  base.py  example.py  galar.py  gods.py  hisui.py  hoenn.py  johto.py  kalos.py  kanto.py  kanto_starters.py  paldea.py  sinnoh.py  unova.py
src/skypy/flatc/: DexData.py  EggHatchInfo.py  EvoData.py  GenderInfo.py  LevelupMoveData.py  Personal.py  PersonalTable.py  SpeciesInfo.py  StatInfo.py
src/skypy/ops/: __init__.py  core.py  getters.py  setters.py
src/skypy/schemas/: __init__.py  _base.py  devid.py  evo.py  itemid.py  trainers.py  trdevid.py  waza.py  za.py
src/skypy/settings/: core.py
src/skypy/types/: __init__.py  logs.py  mappers.py  za.py
src/skypy/utils/: __init__.py  classes.py  logger.py  nb.py
src/skypy/za/: __init__.py  core.py  fields.py  frames.py  load.py  mod.py  trainer_editor.py
test/: test_add_evo.py  test_evo.py  test_read.py  test_runner.py  test_set_ability.py  test_set_moves.py  test_set_stats.py  test_set_trainer.py  test_set_type.py  test_set_waza.py
test/skypy/: test_add_evo.py  test_assets.py  test_set_waza.py
test/skypy/utils/: test_logging.py
tests/: conftest.py
tests/skypy/: test_assets.py  test_dataclasses.py  test_set_ability.py  test_set_stats.py  test_set_type.py
tests/skypy/__main__/: test_main.py
tests/skypy/schemas/: test_pkm_data.py  test_trdata.py  test_trdata_save.py  test_trdata_save_bin.py  test_waza_data.py
tests/skypy/settings/: test_settings.py
tests/skypy/utils/: test_logging.py
tests/skypy/za/: test_trainer_data_editor.py
tests/skypy/za/schemas/: test_moves_data.py  test_pkm_data.py  test_trdata.py  test_trdata_save.py
tests/skypy/za/trainer_editor/: test_ui_create_widgets.py  test_ui_dirs.py  test_ui_init.py  test_ui_load_initial_data.py  test_ui_methods.py  test_ui_on_trainer_selection.py  test_ui_save.py
tests/skypy/za/ui/: test_ui_create_widgets.py  test_ui_init.py  test_ui_methods.py  test_ui_save.py
tests/za/: test_import_trdata.py  test_init.py
tests/za/schemas/: test_effort_values.py  test_pkm_data.py  test_pokemon_data.py  test_trdata.py
tests/za/ui/: test_layout.py  test_ui_create_widgets.py  test_ui_init.py  test_ui_load_initial_data.py  test_ui_load_trainer_data.py  test_ui_run.py  test_ui_save.py
(+15 files in other folders)
