[tool.poetry]
name = "skypy"
version = "0.1.0"
description = ""
authors = ["svnv-svsv-jm <janmail1990@gmail.com>"]
readme = "README.md"
packages = [{ include = "skypy", from = "src" }]
include = ["*.py", "src/**/*.json", "src/**/*.toml"]
exclude = ["test/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
pyrootutils = "^1.0.4"
loguru = "^0.7.2"
pandas-stubs = "^2.1.1.230928"
flatbuffers = "^23.5.26"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
flake8 = "*"
ipython = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-pylint = "*"
pytest-mypy = "*"
pytest-testmon = "*"
pytest-xdist = "*"
virtualenv = "*"
msgpack = "*"
nbmake = "*"
nbstripout = "*"

[tool.black]
line-length = 110
