# ----------------
# Build System
# ----------------
[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

# ----------------
# Project
# ----------------
[project]
name = "skypy"
version = "0.1.1"
description = "Hack Pokemon games data!"
authors = [{ name = "svnv-svsv-jm", email = "janmail1990@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "pandas>=2.1.3,<3",
    "numpy>=1.26.2,<2",
    "pyrootutils>=1.0.4,<2",
    "loguru>=0.7.2,<0.8",
    "pandas-stubs>=2.1.1.230928,<3",
    "flatbuffers>=23.5.26,<24",
    "jinja2>=3.1.2,<4",
    "tqdm>=4.66.1,<5",
    "openpyxl>=3.1.2,<4",
    "pyinstaller>=6.3.0,<7",
    "pandastable>=0.13.1,<0.14",
    "customtkinter>=5.2.1,<6",
    "pydantic>=2.5.3,<3",
    "typer>=0.13.1,<0.14",
    "pydantic-settings>=2.6.1,<3",
    "ndspy>=4.2.0,<5",
    "pendulum>=3.1.0",
    "toml>=0.10.2",
    "pyyaml>=6.0.3",
    "polars>=1.35.2",
    "duckdb>=1.4.2",
    "pyarrow>=22.0.0",
    "pyinstrument>=5.1.1",
]

[project.scripts]
runner = "svsvllm.__main__:main"

[dependency-groups]
dev = [
    "flake8",
    "ipython",
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-mypy",
    "pytest-testmon",
    "pytest-xdist",
    "virtualenv",
    "msgpack",
    "nbmake",
    "nbstripout",
    "ruff>=0.11.6",
    "nbqa>=1.9.1",
    "mypy>=1.15.0",
]

# ----------------
# Ruff
# ----------------
[tool.ruff]
# Directories to lint
include = ["src", "tests"]
exclude = ["__pycache__", "build", "dist", ".venv"]

extend-include = ["*.ipynb"]
line-length = 110

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = [
    "E501",
    "UP",   # pyupgrade
    "D",    # pydocstyle
]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E402", # Allow imports not at top for ML scripts
    "E501",
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "D205", # One blank line required between summary line and description
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double" # Optional: prefer single quotes

# ----------------
# Coverage
# ----------------
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "warnings",
    "pass",
    "rank_zero_warn",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "logger.info",
    "logger.debug",
    "logger.trace",
]

# ----------------
# Pytest
# ----------------
[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
testpaths = ["tests"]
norecursedirs = ["tests/res", "tests/helpers"]
addopts = [
    "-x",
    "--color=yes",
    "--disable-pytest-warnings",
    "--durations=5",
    "--cov=src/",
    "--cov-report",
    "term-missing",
]

# ----------------
# Mypy
# ----------------
[tool.mypy]
mypy_path = ["src"]
exclude = ["tests/conftest.py"]
plugins = ["pydantic.mypy"]
no_implicit_optional = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "customtkinter"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
